--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
+              <span> I accept the terms and conditions of the </span>
               <a class="modal-form-checkbox-link" href="#">Privacy Policy</a>
             </label>
           </div>
@@ -942,7 +942,7 @@
         </li>
       </ul>
       <div>
-        <contacts>
+        <address class="mobail-menu-address">
           <ul class="mobile-menu-address-list">
             <li class="mobile-menu-address-item">
               <a
@@ -957,9 +957,9 @@
               >
             </li>
           </ul>
-        </contacts>
-        <div class="mobile-menu-social">
-          <ul class="social-links menu-social-list">
+        </address>
+        <!-- <div class="mobile-menu-social"> -->
+          <ul class="social-links mobile-menu-social-list">
             <li class="mobile-menu-social-item">
               <a
                 href="https://www.instagram.com/"
@@ -1014,11 +1014,10 @@
               </a>
             </li>
           </ul>
-        </div>
+        <!-- </div> -->
       </div>
-      <script src="./scripts/version.js" defer></script>
-      <script src="./scripts/modalform.js" defer></script>
-      <script src="./scripts/mobilemenu.js" defer></script>
     </div>
+    <script src="./scripts/modalform.js" defer></script>
+    <script src="./scripts/mobilemenu.js" defer></script>
   </body>
 </html>
