--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
           type="button"
           aria-label="modal window close button"
         >
-          <svg class="modal-window-close-svg" width="12" height="12">
+          <svg class="modal-window-close-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -896,8 +896,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <span> I accept the terms and conditions of the </span>
-              <a class="modal-form-checkbox-link" href="#">Privacy Policy</a>
+              <span> I accept the terms and conditions of the 
+              <a class="modal-form-checkbox-link" href="#">Privacy Policy</a></span>
             </label>
           </div>
 
